--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>CityScheduler</title>
+    <link href="https://fonts.googleapis.com/css?family=Alike|Neuton" rel="stylesheet">
+    <title>Bread Scheduler</title>
   </head>
-  <body>
+  <body class="bg-light">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
