--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Alike|Neuton" rel="stylesheet">
-    <title>Bread Scheduler</title>
+    <title>Bread Sked: Bread recipe scheduler and timer for better sourdough</title>
   </head>
   <body class="bg-light">
     <div id="app"></div>
